--- a/nextjs14-social-media-full-stack/package.json
+++ b/nextjs14-social-media-full-stack/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "11.10.4",
     "@mui/icons-material": "5.10.9",
     "@mui/material": "5.10.10",
+    "@tanstack/react-query": "4.13.0",
     "axios": "1.1.3",
     "moment": "2.29.4",
     "next": "14.0.4",
